Setup wizard: - added CmdiProfileSelect and Confirmation contents - check on imdi/cmdi selection (at least one should be selected) on Next - confirmation dialog on cancel - Text content has hyperlink wizard to open external links in browser
 (refs #1026)

--- a/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect.html
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect.html
@@ -1,6 +1,18 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
-<p>Select metadata format</p>
+<h2>Select a metadata format</h2>
+<p>
+    Please select the metadata format you plan to use. Both metadata formats<br/>
+    can be used simultaneously in Arbil, but most users will only use one of<br/>
+    the formats below. Selecting only one option will <em>not</em> permanently<br/>
+    disable the other in any way.
+</p>
+<p>
+    <strong>IMDI</strong> is the Isle Meta Data Initiative standard. More<br />
+    information can be found at <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
+</p>
+<p>
+    <strong>CMDI</strong> is the Component MetaData Infrastructure, a profile <br />
+    based approach to metadata where domain specific profiles can be designed<br />
+    that define a structure for metadata instance. For more information, <br />
+    visit <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
+</p>
