--- a/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect.html
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <h2>Select a metadata format</h2>
 <p>
-    Please select the metadata format you plan to use. Both metadata formats<br/>
-    can be used simultaneously in Arbil, but most users will only use one of<br/>
-    the formats below. Selecting only one option will <em>not</em> permanently<br/>
-    disable the other in any way.
+    Please select the metadata format you plan to use. Both metadata formats can be used <br />
+    simultaneously in Arbil, but most users will only use one of the formats below. Selecting<br />
+    only one option will <em>not</em> permanently disable the other in any way.
 </p>
 <p>
-    <strong>IMDI</strong> is the Isle Meta Data Initiative standard. More<br />
-    information can be found at <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
+    <strong>IMDI</strong> is the Isle Meta Data Initiative standard. More information can be<br />
+    found at <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
 </p>
 <p>
-    <strong>CMDI</strong> is the Component MetaData Infrastructure, a profile <br />
-    based approach to metadata where domain specific profiles can be designed<br />
-    that define a structure for metadata instance. For more information, <br />
-    visit <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
+    <strong>CMDI</strong> is the Component MetaData Infrastructure, a profile based approach to<br />
+    metadata where domain specific profiles can be designed that define a structure for metadata<br />
+    instance. For more information, visit <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
 </p>
