--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect.html
@@ -5,5 +5,5 @@
     You can always change your selection by selecting 'Templates/Profiles' from the Options menu.
 </p>
 <p>
-    Press the button below to open the profiles list.
+    Press the button below to open the profiles list, and press <strong>Close</strong> when you're done.
 </p>
