Added instance of CmdiProfilesPanel to the profile selection part of the setup wizard (refs #1026). Added new 'beforeShow' method to wizard content interface. In profile selection, the selection panel is not loaded & shown until the containing wizard content is shown (this prevents unnecessary loading in case of non-cmdi and also makes the selection list not depend the overall dialog height).

--- a/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect.html
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect.html
@@ -5,5 +5,10 @@
     You can always change your selection by selecting 'Templates/Profiles' from the Options menu.
 </p>
 <p>
-    Press the button below to open the profiles list, and press <strong>Close</strong> when you're done.
+    Select the profiles you would like to start using from the list below. If this is the first time<br />
+    you run this Wizard, the profiles will have to be download first. In this case, it will take some<br />
+    time before the list appears.
+</p>
+<p>
+    If you hover over any one of the profile names, you will see a description of that profile.
 </p>
