--- a/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction.html
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction.html
@@ -3,7 +3,7 @@
     Welcome to Arbil!
 </h1>
 <p>
-    This wizard will help you with the initial setup of Arbil based on the way you plan to use<br />
+    This wizard will help you with the initial setup of Arbil based on the way you plan to use<br>
     Arbil.
 </p>
 <p>
