--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/Confirmation.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/Confirmation.html
@@ -4,7 +4,7 @@
     Arbil now is ready to be configured according to your preferences.
 </p>
 <p>
-    Click <strong>Finish</strong> to apply all of your changes. All of the settings in the wizard can be<br />
-    changed at any time through the options of this application. You can also choose to run the wizard<br/>
+    Click <strong>Finish</strong> to apply all of your changes. All of the settings in the wizard can be<br>
+    changed at any time through the options of this application. You can also choose to run the wizard<br>
     again by selecting <strong>Wizard</strong> from the <strong>Help</strong> menu.
 </p>
