--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <h2>Remote locations</h2>
 <p>
-    In the text box below you can specify the remote locations that should appear in the &quot;Remote<br />
-    Corpus&quot; tree in Arbil. Depending on the metadata format(s) you selected, a number of collections<br />
+    In the text box below you can specify the remote locations that should appear in the &quot;Remote<br>
+    Corpus&quot; tree in Arbil. Depending on the metadata format(s) you selected, a number of collections<br>
     has already been specified.
 </p>
 <p>
-    Notice that each line should be a URL referencing a metadata instance or collection in either the<br />
+    Notice that each line should be a URL referencing a metadata instance or collection in either the<br>
     IMDI or CMDI format.
 </p>
