--- a/arbil/src/main/java/nl/mpi/arbil/ui/applet/ArbilApplet.html
+++ b/arbil/src/main/java/nl/mpi/arbil/ui/applet/ArbilApplet.html
@@ -5,13 +5,17 @@
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-  <head>
-    <title>Arbil Test Applet</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  </head>
-  <body>
-    <APPLET CODEBASE="http://www.mpi.nl/tg/j2se/jnlp/arbil/" CODE="nl.mpi.arbil.ArbilApplet.class" ARCHIVE="arbil-0-3-16479.jar,lib/corpusstructure-1.6.1.jar,lib/imdiapi-1.0.6.jar,lib/log4j-1.2.14.jar,lib/saxon8.jar,lib/saxon8-dom.jar,lib/typecheck-1.5.16185.jar,lib/xalan-2.6.0.jar,lib/xercesImpl-2.9.0.jar"
-        WIDTH=100% HEIGHT=100%>
-</APPLET>
-  </body>
+    <head>
+	<title>Arbil Test Applet</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
+    <body>
+	<!-- "/Users/twagoo/Desktop/arbil-build-2.4.x/" -->
+	<!-- "http://www.mpi.nl/tg/j2se/jnlp/arbil/"  -->
+	<APPLET CODEBASE="http://www.mpi.nl/tg/j2se/jnlp/arbil/" 
+		CODE="nl.mpi.arbil.ui.applet.ArbilApplet2.class" 
+		ARCHIVE="arbil-2-4-28773.jar,lib/corpusstructure-api-1.7.3.jar,lib/mpi-util-1.0.0.jar,lib/imdi-api-1.1.2.jar,lib/log4j-1.2.14.jar,lib/saxon-8.7.jar,lib/saxon-dom-8.7.jar,lib/typechecker-1.6.5.jar,lib/xalan-2.7.1.jar,lib/xercesImpl-2.9.0.jar,lib/xmlbeans-2.4.0.jar"
+		WIDTH="100%" HEIGHT="100%">
+	</APPLET>
+    </body>
 </html>
