--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_it.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_it.html
@@ -18,7 +18,7 @@
 
 -->
 <!DOCTYPE html>
-<h2>Selezionate i profili CMDI</h2>
+<h2>Selezione profili CMDI</h2>
 <p>
     Selezionate i profili CMDI che intendete utilizzare.<br>
     Potrete in ogni caso modificare la vostra selezione selezionando 'Modelli/profili' dal menu Opzioni.
@@ -28,5 +28,5 @@
     la procedura guidata, dovrete scaricare i profili prima di continuare. In tal caso, l'operazione richiederà tempo.
 </p>
 <p>
-    Al passaggio del mouse su uno qualsiasi dei nomi dei profili, potrete vedere una descrizione di tale profilo.
+    Posizionando il mouse su uno qualsiasi dei nomi dei profili, potrete vedere una descrizione di tale profilo.
 </p>
