--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_es.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_es.html
@@ -19,11 +19,11 @@
 -->
 <!DOCTYPE html>
 <h1>
-    Bienvenidos en Arbil!
+    Bienvenidos a Arbil!
 </h1>
 <p>
-    Este asistente os ayudará con la instalación de Arbil según la manera que os resulte <br>
-    más adecuada.
+    Este asistente os ayudará a instalar Arbil de acuerdo con el uso que vais a hacer<br>
+    de la misma aplicación.
 </p>
 <p>
     Presionar <strong>Siguiente</strong> para empezar el asistente.
