--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_es.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_es.html
@@ -18,13 +18,13 @@
 
 -->
 <!DOCTYPE html>
-<h2>Remote locations</h2>
+<h2>Ubicaciones remotas</h2>
 <p>
-    In the text box below you can specify the remote locations that should appear in the &quot;Remote<br>
-    Corpus&quot; tree in Arbil. Depending on the metadata format(s) you selected, a number of collections<br>
-    has already been specified.
+    En el cuadro de texto aquí abajo podéis especificar las ubicaciones remotas que se visualizarán en el árbol del<br>
+    &quot;Corpus remoto&quot; de Arbil. Según el/los formato(s) de metadatos previamente seleccionado(s), unas colecciones<br>
+    podrían ya haber sido especificadas.
 </p>
 <p>
-    Notice that each line should be a URL referencing a metadata instance or collection in either the<br>
-    IMDI or CMDI format.
+    Aviso: cada línea, tanto en el formato IMDI como en el formato CMDI, debería ser un URL con referencia a una<br>
+    instancia o a una colección de metadatos.
 </p>
