--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_it.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_it.html
@@ -21,10 +21,10 @@
 <h2>Postazioni remote</h2>
 <p>
     Nella casella di testo sottostante potete specificare le postazioni remote che appariranno nell'albero del &quot;Corpus<br>
-    remoto&quot; di Arbil. A seconda del/i formato/i di metadati selezionato/i, alcune postazioni <br>
+    remoto&quot; di Arbil. A seconda del/i formato/i dei metadati selezionato/i, alcune postazioni <br>
     potrebbero essere già state specificate.
 </p>
 <p>
-    Avviso: ogni linea, sia nel formato IMDI che in quello CMDI, dovrebbe essere un URL con riferimento a un'istanza <br>
+    Avviso: ogni linea, sia nel formato IMDI sia in quello CMDI, dovrebbe essere un URL con riferimento a un'istanza <br>
     o a una collezione di metadati.
 </p>
