--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Confirmation_es.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Confirmation_es.html
@@ -18,12 +18,12 @@
 
 -->
 <!DOCTYPE html>
-<h2>Done!</h2>
+<h2>Listo!</h2>
 <p>
-    Arbil now is ready to be configured according to your preferences.
+    Arbil está listo para ser configurado según vuestras preferencias.
 </p>
 <p>
-    Click <strong>Finish</strong> to apply all of your changes. All of the settings in the wizard can be<br>
-    changed at any time through the options of this application. You can also choose to run the wizard<br>
-    again by selecting <strong>Wizard</strong> from the <strong>Help</strong> menu.
+    Presionar <strong>Finalizar</strong> para aplicar todos los cambios realizados. La configuración del asistente puede ser<br>
+    modificada en cualquier momento a través de las opciones de la aplicación. Incluso podéis decidir ejecutar el asistente<br>
+    otra vez seleccionando <strong>Ejecutar asistente para instalación</strong> desde el menú <strong>Guía</strong>.
 </p>
