--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_it.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_it.html
@@ -19,10 +19,10 @@
 -->
 <!DOCTYPE html>
 <h1>
-    Benvenuto in Arbil!
+    Benvenuto su Arbil!
 </h1>
 <p>
-    La procedura guidata vi aiuterà a installare Arbil nella maniera per voi più consona. 
+    La procedura guidata vi aiuterà a installare Arbil nella maniera a voi più consona. 
 </p>
 <p>
     Premere <strong>Successivo</strong> per iniziare la procedura guidata.
