--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_es.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_es.html
@@ -18,18 +18,18 @@
 
 -->
 <!DOCTYPE html>
-<h2>Seleccionar un formato para los metadatos</h2>
+<h2>Selección formato metadatos</h2>
 <p>
     Seleccionad el formato de metadatos que queréis utilizar. Ambos formatos se pueden utilizar <br>
-    simultáneamente en Arbil, pero la mayoría de los usuarios utiliza normalmente uno del formatos aquí abajo. Al seleccionar<br>
+    simultáneamente en Arbil, pero la mayoría de los usuarios suele utilizar uno de los dos formatos aquí abajo. Al seleccionar<br>
     sólo una opción <em>no</em> se deshabilitará de manera permanente la otra.
 </p>
 <p>
-    <strong>IMDI</strong> significa Isle Meta Data Initiative standard. Para más informaciones<br>
-    consultar el sitio <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
+    <strong>IMDI</strong> significa Isle Meta Data Initiative. Para más informaciones<br>
+    consultar el sitio web <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
 </p>
 <p>
-    <strong>CMDI</strong> is the Component MetaData Infrastructure, a profile based approach to<br>
-    metadata where domain specific profiles can be designed that define a structure for metadata<br>
-    instance. For more information, visit <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
+    <strong>CMDI</strong> significa Component MetaData Infrastructure, una manera especial de utilizar <br>
+    los metadatos que se sirve de perfiles específicos de un dominio para definir la estructura de una <br>
+    instancia de metadatos. Para más informaciones, consultar el sitio web <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
 </p>
