--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_it.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_it.html
@@ -18,7 +18,7 @@
 
 -->
 <!DOCTYPE html>
-<h2>Selezionate un formato per i metadati</h2>
+<h2>Selezione formato metadati</h2>
 <p>
     Selezionate il formato dei medatati che intendete usare. Entrambi i formati possono essere usati <br>
     contemporaneamente in Arbil, ma la maggior parte degli utenti utilizza uno solo dei formati qui sotto riportati. La selezione<br>
@@ -26,10 +26,10 @@
 </p>
 <p>
     L'acronimo <strong>IMDI</strong> sta per Isle Meta Data Initiative. Per maggiori informazioni<br>
-    consultare il sito <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
+    consultate il sito <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a>.
 </p>
 <p>
     L'acronimo <strong>CMDI</strong> sta invece per Component MetaData Infrastructure, un particolare tipo di approccio che<br>
     si serve di profili specifici di un dominio per definire la struttura di un'istanza di metadati.<br> 
-    Per maggiori informaizoni, visitate il sito <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
+    Per maggiori informazioni, visitate il sito <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
 </p>
