checked spelling mistakes in menus, widgets, services and wizard

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_es.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_es.html
@@ -25,8 +25,8 @@
 </p>
 <p>
     Seleccionad los perfiles que queréis utilizar desde la lista aquí abajo. Si ésta es la primera vez<br>
-    que ejecutáis este asistente, los perfiles deberán ser descargados antes de continuar. En este caso, la operación<br>
-    llevará tiempo.
+    que ejecutáis este asistente, los perfiles deberán ser descargados antes de poder visualizar la lista.<br>
+    La operación llevará tiempo.
 </p>
 <p>
     Al posicionar el ratón sobre uno qualquiera de los nombres de los perfiles, se visualizará una descripción de este perfil.
