--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_it.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_it.html
@@ -22,7 +22,7 @@
     Benvenuto su Arbil!
 </h1>
 <p>
-    La procedura guidata vi aiuterà a installare Arbil nella maniera a voi più consona. 
+    La procedura guidata vi aiuterà a installare Arbil in base all'uso che intendete farne. 
 </p>
 <p>
     Premere <strong>Successivo</strong> per iniziare la procedura guidata.
