--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_es.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_es.html
@@ -21,8 +21,8 @@
 <h2>Selección formato metadatos</h2>
 <p>
     Seleccionad el formato de metadatos que queréis utilizar. Ambos formatos se pueden utilizar <br>
-    simultáneamente en Arbil, pero la mayoría de los usuarios suele utilizar uno de los dos formatos aquí abajo. Al seleccionar<br>
-    sólo una opción <em>no</em> se deshabilitará de manera permanente la otra.
+    simultáneamente en Arbil, pero la mayoría de los usuarios suele utilizar uno de los dos formatos aquí<br>
+    abajo. Al seleccionar sólo una opción <em>no</em> se deshabilitará de manera permanente la otra.
 </p>
 <p>
     <strong>IMDI</strong> significa Isle Meta Data Initiative. Para más informaciones<br>
