--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_it.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_it.html
@@ -25,7 +25,8 @@
 </p>
 <p>
     Selezionate i profili che intendete utilizzare dalla lista sottostante. Se è la prima volta che avviate
-    la procedura guidata, dovrete scaricare i profili prima di continuare. In tal caso, l'operazione richiederà tempo.
+    la procedura guidata, dovrete scaricare i profili prima di poter visualizzare la lista. L'operazione<br>
+    richiederà tempo.
 </p>
 <p>
     Posizionando il mouse su uno qualsiasi dei nomi dei profili, potrete vedere una descrizione di tale profilo.
