--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_es.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_es.html
@@ -25,6 +25,6 @@
     podrían ya haber sido especificadas.
 </p>
 <p>
-    Aviso: cada línea, tanto en el formato IMDI como en el formato CMDI, debería ser un URL con referencia a una<br>
+    Advertencia: cada línea, tanto en el formato IMDI como en el formato CMDI, debería ser un URL con referencia a una<br>
     instancia o a una colección de metadatos.
 </p>
