--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_it.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_it.html
@@ -20,8 +20,8 @@
 <!DOCTYPE html>
 <h2>Postazioni remote</h2>
 <p>
-    Nella casella di testo sottostante potete specificare le postazioni remote che appariranno nell'albero del &quot;Corpus<br>
-    remoto&quot; di Arbil. A seconda del/i formato/i dei metadati selezionato/i, alcune postazioni <br>
+    Nella casella di testo sottostante potete specificare le postazioni remote che appariranno nell'albero del<br>
+    &quot;Corpus remoto&quot; di Arbil. A seconda del/i formato/i dei metadati selezionato/i, alcune postazioni <br>
     potrebbero essere già state specificate.
 </p>
 <p>
