--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_de.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_de.html
@@ -19,13 +19,12 @@
 -->
 <!DOCTYPE html>
 <h1>
-    Willkommen zu Arbil!
+    Willkommen in Arbil!
 </h1>
 <p>
-    THIS IS AN EXAMPLE, REPLACE WITH REAL TRANSLATION
-    This wizard will help you with the initial setup of Arbil based on the way you plan to use<br>
+    Dieser Assistent wird Ihnen beim Setup von Arbil entsprechend Ihrer Nutzungswünschen helfen <br>
     Arbil.
 </p>
 <p>
-    Press <strong>Next</strong> to go to the first step of the wizard.
+    <strong>Weiter</strong> drücken um zum ersten Schritt im Assistenten zu kommen.
 </p>
