added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_de.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_de.html
@@ -18,16 +18,16 @@
 
 -->
 <!DOCTYPE html>
-<h2>Select your CMDI profiles</h2>
+<h2>Wählen Sie Ihre CMDI-Profile aus</h2>
 <p>
-    Please select the CMDI profiles that you wish to use.<br>
-    You can always change your selection by selecting 'Templates/Profiles' from the Options menu.
+    Bitte wählen Sie Ihre CMDI-Profile aus, die sie verwenden möchten.<br>
+    Sie können Ihre Auswahl immer noch ändern, indem Sie 'Vorlagen/Profile' im Optionen-Menu benutzen.
 </p>
 <p>
-    Select the profiles you would like to start using from the list below. If this is the first time<br>
-    you run this Wizard, the profiles will have to be download first. In this case, it will take some<br>
-    time before the list appears.
+    Wählen Sie die Profile mit denen Sie beginnen möchten aus der unten-stehenden Liste. Wenn dieses das erste Mail ist,<br>
+    dass Sie den Assistenten verweden, müssen Sie die Profile erst herunterladen. IN diesem Falle kann es einen Moment dauern,<br>
+    bevor die Liste angezeigt wird.
 </p>
 <p>
-    If you hover over any one of the profile names, you will see a description of that profile.
+    Wenn Sie auf die Profile zeigen, werden Sie eine Beschreibung dieser sehen.
 </p>
