--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_de.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_de.html
@@ -18,13 +18,13 @@
 
 -->
 <!DOCTYPE html>
-<h2>Remote locations</h2>
+<h2>Entfernte Speicherorte</h2>
 <p>
-    In the text box below you can specify the remote locations that should appear in the &quot;Remote<br>
-    Corpus&quot; tree in Arbil. Depending on the metadata format(s) you selected, a number of collections<br>
-    has already been specified.
+    Im unten-stehenden Textfeld können Sie die entfernten Speicherorte angeben, die im &quot;Entfernten<br>
+    Korpus&quot;-Baum in Arbil angezeigt werden sollen. Abhängig vom/ von den Metadaten-Format(en), die Sie wählen, ist eine<br>
+    bestimmte Anzahl von Sammlungen schon vorhanden.
 </p>
 <p>
-    Notice that each line should be a URL referencing a metadata instance or collection in either the<br>
-    IMDI or CMDI format.
+    Beachten Sie, dass jede Zeile eine URL zu einer Metadaten-Einheit oder -Sammlung in IMDI oder CMDI Format<br>
+    sein sollte.
 </p>
