added german resources (copied from french)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_de.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_de.html
@@ -29,7 +29,7 @@
     auf <a href="http://www.mpi.nl/IMDI/">www.mpi.nl/IMDI/</a> zu finden.
 </p>
 <p>
-    <strong>CMDI</strong> ist die Komponenten-Metadaten Infrastruktur, ein auf Profilen-basierende<br>
+    <strong>CMDI</strong> ist die Komponenten-Metadaten Infrastruktur, eine auf Profilen-basierende<br>
     Herangehensweise für Metadaten, wobei domänenspezifische Profile designt werden können, die eine Struktur für Metadaten-Einheiten<br>
     definieren. Mehr Informationen auf <a href="http://www.clarin.eu/cmdi">www.clarin.eu/cmdi</a>.
 </p>
