--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_de.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_de.html
@@ -25,7 +25,7 @@
 </p>
 <p>
     Wählen Sie die Profile mit denen Sie beginnen möchten aus der unten-stehenden Liste. Wenn dieses das erste Mail ist,<br>
-    dass Sie den Assistenten verweden, müssen Sie die Profile erst herunterladen. IN diesem Falle kann es einen Moment dauern,<br>
+    dass Sie den Assistenten verwenden, müssen Sie die Profile erst herunterladen. IN diesem Falle kann es einen Moment dauern,<br>
     bevor die Liste angezeigt wird.
 </p>
 <p>
