--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_de.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction_de.html
@@ -22,8 +22,7 @@
     Willkommen in Arbil!
 </h1>
 <p>
-    Dieser Assistent wird Ihnen beim Setup von Arbil entsprechend Ihrer Nutzungswünschen helfen <br>
-    Arbil.
+    Dieser Assistent wird Ihnen beim Setup von Arbil entsprechend Ihrer Nutzungswünschen helfen. <br>
 </p>
 <p>
     <strong>Weiter</strong> drücken um zum ersten Schritt im Assistenten zu kommen.
