finished to check the Italian translation

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_it.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_it.html
@@ -21,7 +21,7 @@
 <h2>Selezione profili CMDI</h2>
 <p>
     Selezionate i profili CMDI che intendete utilizzare.<br>
-    Potrete in ogni caso modificare la vostra selezione selezionando 'Modelli/profili' dal menu Opzioni.
+    Potrete in ogni caso modificare la vostra selezione selezionando Modelli/profili dal menu Opzioni.
 </p>
 <p>
     Selezionate i profili che intendete utilizzare dalla lista sottostante. Se è la prima volta che avviate
