--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_it.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/RemoteLocations_it.html
@@ -18,10 +18,10 @@
 
 -->
 <!DOCTYPE html>
-<h2>Postazioni remote</h2>
+<h2>Ubicazioni remote</h2>
 <p>
-    Nella casella di testo sottostante potete specificare le postazioni remote che appariranno nell'albero del<br>
-    &quot;Corpus remoto&quot; di Arbil. A seconda del/i formato/i dei metadati selezionato/i, alcune postazioni <br>
+    Nella casella di testo sottostante potete specificare le ubicazioni remote che appariranno nell'albero del<br>
+    &quot;Corpus remoto&quot; di Arbil. A seconda del/i formato/i di metadati selezionato/i, alcune ubicazioni <br>
     potrebbero essere già state specificate.
 </p>
 <p>
