checked also the Spanish translation

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_es.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_es.html
@@ -21,7 +21,7 @@
 <h2>Selección perfiles CMDI</h2>
 <p>
     Seleccionad los perfiles CMDI que queréis utilizar.<br>
-    Podéis, de todas formas, modificar vuestra selección seleccionando 'Plantillas/perfiles' desde el menú Opciones.
+    Podéis, de todas formas, modificar vuestra selección seleccionando Plantillas/perfiles desde el menú Opciones.
 </p>
 <p>
     Seleccionad los perfiles que queréis utilizar desde la lista aquí abajo. Si ésta es la primera vez<br>
