Created branch for Arbil 2.5 (putting into testing)

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_de.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/CmdiProfileSelect_de.html
@@ -20,12 +20,12 @@
 <!DOCTYPE html>
 <h2>Wählen Sie Ihre CMDI-Profile aus</h2>
 <p>
-    Bitte wählen Sie Ihre CMDI-Profile aus, die sie verwenden möchten.<br>
+    Bitte wählen Sie Ihre CMDI-Profile aus, die Sie verwenden möchten.<br>
     Sie können Ihre Auswahl immer noch ändern, indem Sie 'Vorlagen/Profile' im Optionen-Menu benutzen.
 </p>
 <p>
-    Wählen Sie die Profile mit denen Sie beginnen möchten aus der unten-stehenden Liste. Wenn dieses das erste Mail ist,<br>
-    dass Sie den Assistenten verweden, müssen Sie die Profile erst herunterladen. IN diesem Falle kann es einen Moment dauern,<br>
+    Wählen Sie die Profile mit denen Sie beginnen möchten aus der untenstehenden Liste. Wenn dieses das erste Mal ist,<br>
+    dass Sie den Assistenten verwenden, müssen Sie die Profile erst herunterladen. In diesem Falle kann es einen Moment dauern,<br>
     bevor die Liste angezeigt wird.
 </p>
 <p>
