--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_it.html
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect_it.html
@@ -20,7 +20,7 @@
 <!DOCTYPE html>
 <h2>Selezione formato metadati</h2>
 <p>
-    Selezionate il formato dei medatati che intendete usare. Entrambi i formati possono essere usati <br>
+    Selezionate il formato di medatati che intendete usare. Entrambi i formati possono essere usati <br>
     contemporaneamente in Arbil, ma la maggior parte degli utenti utilizza uno solo dei formati qui sotto riportati. La selezione<br>
     di un'opzione <em>non</em> disabiliterà l'altra in modo permanente.
 </p>
